pom configurate